[metadata]
name = m3u8maker
version = 3.0.0
description = Packaging sample project
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE
license_file = file: LICENSE
url = https://github.com/chekke1999/m3u8maker

[option]
install_requires =
    toml
    mutagen