[metadata]
name = m3u8maker
version = 3.0.0
description = 引数で渡されたディレクトリをベースにm3u8を生成するプログラム。
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GENERAL PUBLIC LICENSE
license_file = LICENSE
url = https://github.com/chekke1999/m3u8maker

[options]
scripts =
    m3u8maker.py
install_requires =
    toml
    mutagen
[options.entry_points]
console_scripts =
    m3u8maker = m3u8maker:main